# server/src/routes.ts
@@ -7,20 +7,17 @@ import { celebrate} from 'celebrate'
 import { ValidatePoint } from './validations/points';
 import { CelebrateConfig } from "./config/celebrate";
 
-const routes = express.Router();
+export const v1 = express.Router();
 const upload = multer({storage, fileFilter});
 
 const pointsController = new PointsController();
 const itemsController = new ItemsController();
 
 
+v1.get('/items', itemsController.index);
 
-routes.get('/items', itemsController.index);
+v1.get('/points', pointsController.index);
+v1.get('/points/:id', pointsController.show);
 
-routes.get('/points', pointsController.index);
-routes.get('/points/:id', pointsController.show);
-
-routes.post('/points', upload.single('image'), celebrate(ValidatePoint, CelebrateConfig), 
+v1.post('/points', upload.single('image'), celebrate(ValidatePoint, CelebrateConfig), 
 pointsController.create);
-
-export default routes;
